fix big titles on mobile

--- a/resources/scss/theme/_thumbs.scss
+++ b/resources/scss/theme/_thumbs.scss
@@ -1062,6 +1062,7 @@
                 position: absolute;
                 -webkit-line-clamp: 2;
                 width: 132%;
+                min-height: 37px;
             }
 
             .stars {
